--- a/style.css
+++ b/style.css
@@ -1,13 +1,19 @@
+.container{
+    place-items: center;
+    margin: 0 auto;
+    orientation: landscape;
+}
 
-.start{
-    width: 1920px;
-    height: 1180px;
+body{ 
+    background: url("https://tweedekamer2021.stemwijzer.nl/gfx/img/background.jpg") no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
     background-size: cover;
-    background-image: url("https://tweedekamer2021.stemwijzer.nl/gfx/img/background.jpg")  ;
 }
 
 .start__modal {
-    position: relative;
+    left:50%;
     width: 100%;
     max-width: 744px;
     border-radius: 12px;
@@ -15,4 +21,96 @@
     background: #fff;
     box-shadow: 0 0 2px rgb(0 0 0 / 10%), 0 16px 80px rgb(0 0 0 / 10%);
     z-index: 2;
+}
+
+.statement_modal {
+    position:relative;
+    z-index: 100;
+    width: 100%;
+    border-radius: 12px;
+    padding: 64px 50px 64px 64px;
+    background: #fff;
+    box-shadow: 0 0 2px rgb(0 0 0 / 10%), 0 16px 80px rgb(0 0 0 / 10%);
+    z-index: 2;
+}
+
+.spec_statement_modal {
+    position:relative;
+    z-index: 100;
+    width: 100%;
+    border-radius: 12px;
+    padding: 5px 5px 5px 10px;
+    background: #fff;
+    box-shadow: 0 0 2px rgb(0 0 0 / 10%), 0 16px 80px rgb(0 0 0 / 10%);
+    z-index: 2;
+}
+
+
+.statement {
+    position:absolute;
+    align-items: center;
+    flex-direction: column;
+    padding: 216px 0 262px;
+    width: 70%;
+}
+
+.statement-text {
+    font-size: 32px;
+    display: inline;
+    position:relative;
+    z-index: 100;
+}
+
+
+.statement__theme {
+    display: inline-block;
+
+    text-align: left;
+    margin-bottom: 8px;
+    font-weight: 700;
+    font-size: 36px;
+    color: #233fff;
+    line-height: 44px;
+    position:relative;
+    z-index: 100;
+}
+.startButton{background-color: #233fff; color:white;}
+.thoughts{background-color: white; color:black; border: solid black 1px;}
+.thoughts2{background-color: white; color:black; border: solid black 1px; display:inline-block;}
+.agree {background-color: #20a84b;}
+.neither {background-color: #e7eaeb; color: black;}
+.disAgree {background-color: #eb2045;}
+.skip {background-color: 12px;}
+
+.row {
+display: flex; /* equal height of the children */
+}
+
+.col {
+flex: 1; /* additionally, equal width */
+padding: 1em;
+padding-top:0px;
+margin: 2px;
+}
+
+.col ul{
+    margin: 0; 
+    padding: 0;
+    list-style-type: none;
+}
+
+.col h4{
+    font-weight: bold;
+}
+
+.buttons {
+    background-color: white;
+    padding: 45px;
+    width: 110%;
+    color: white;
+    position: fixed;
+    place-items: center;
+    text-align: center;
+    margin: 10px;
+
 }
